2010-10-12  Glenn Morris  <rgm@gnu.org>

	* BUGS, INSTALL.BZR, README: Updates.

2010-10-08  Eli Zaretskii  <eliz@gnu.org>

	* make-dist: Don't distribute src/buildobj.h.  (Bug#7167)

2010-06-23  Glenn Morris  <rgm@gnu.org>

	* info/dir: Start descriptions in column 32, per Texinfo convention.

2010-06-12  Chong Yidong  <cyd@stupidchicken.com>

	* INSTALL: Update font information (Bug#6389).

2010-06-10  Glenn Morris  <rgm@gnu.org>

	* INSTALL: General update.

2010-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* .bzrignore: Ignore new files from trunk, which appear if you use
	colocated branches (i.e. "bzr switch").

2010-05-10  Miles Bader  <miles@gnu.org>

	* configure.in: Get rid of "unix" pre-defined macro when
	preprocessing Makefile.  (Bug#5857)  [Backport from trunk]

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-05-03  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* INSTALL: Fix typos.

2010-05-03  Chong Yidong  <cyd@stupidchicken.com>

	* configure.in: Add check for buggy version of GCC (Bug#6031).

2010-01-31  Juri Linkov  <juri@jurta.org>

	* .bzrignore: Add TAGS-LISP.

2010-01-23  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)

	* configure.in: Check for utmp.h availability (FreeBSD 9.x lacks
	this header file).

2010-01-12  Juanma Barranquero  <lekktu@gmail.com>

	* .bzrignore: Ignore all .exe, instead of individual files.

2010-01-12  Chong Yidong  <cyd@stupidchicken.com>

	* configure.in: Explicitly check for and link to -lXrender.

2010-01-12  Glenn Morris  <rgm@gnu.org>

	* INSTALL.BZR, README: Use bug-gnu-emacs rather than emacs-pretest-bug
	for bug reports for development versions.

2010-01-02  Eli Zaretskii  <eliz@gnu.org>

	* .bzrignore: Add more ignored patterns, including for the MS-DOS
	build.

2009-12-27  Karl Fogel  <kfogel@red-bean>

	* INSTALL.BZR: Rename from INSTALL.CVS; edit to talk about Bazaar.
	* INSTALL, autogen.sh, configure.in, configure: Adjust accordingly.
