@@ -17,6 +17,11 @@ with a prefix argument or by typing C-u C-h C-n.
 
 * Installation Changes in Emacs 23.3
 
+---
+** New configure option --with-crt-dir specifies the location of your
+crt*.o files, if they are in a non-standard location.  This is only
+used on x86-64 and s390x GNU/Linux architectures.
+
 * Startup Changes in Emacs 23.3
 
 * Changes in Emacs 23.3
