@@ -1,3 +1,9 @@
+2010-11-03  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (CRT_DIR): New variable, set by configure.
+	* m/amdx86-64.h, m/ibms390x.h (START_FILES, LIB_STANDARD):
+	Use $CRT_DIR rather than HAVE_LIB64_DIR.  (Bug#5655)
+
 2010-11-01  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* process.c (kbd_is_on_hold): New variable.
