@@ -1,3 +1,9 @@
+2010-11-03  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (CRT_DIR): New output variable.
+	(--with-crt-dir): New option.  (Bug#5655)
+	(HAVE_LIB64_DIR): Remove.
+
 2010-10-12  Glenn Morris  <rgm@gnu.org>
 
 	* BUGS, INSTALL.BZR, README: Updates.
